@@ -22,6 +22,7 @@ plugins {
     id "nebula.ospackage" version "8.3.0"
     id 'nebula.ospackage-application' version "8.3.0"
     id 'com.google.cloud.tools.jib' version '2.2.0'
+    id 'org.asciidoctor.jvm.convert' version '3.1.0'
 }
 
 ext.dtestJar = System.getenv("DTEST_JAR") ?: "dtest-5.0.jar" // trunk is currently 5.0.jar - update when trunk moves
